--- a/src/lemonade.css
+++ b/src/lemonade.css
@@ -59,3 +59,38 @@ button:focus {
   position: relative;
   overflow: hidden;
 }
+
+#lemonJuice {
+  height: 100%;
+  width: 100%;
+  background-color: #fff1aa;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(0, 100%);
+  transition: transform 0.7s;
+}
+
+#water {
+  height: 100%;
+  width: 100%;
+  background-color: skyblue;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  transform: translate(0, 100%);
+  transition: transform 0.7s;
+}
+
+#sugar {
+  height: 100%;
+  width: 100%;
+  background-color: #FFF;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.4;
+  transform: translate(0, 100%);
+  transition: transform 0.7s;
+}
