--- a/src/lemonade.css
+++ b/src/lemonade.css
@@ -94,3 +94,17 @@ button:focus {
   transform: translate(0, 100%);
   transition: transform 0.7s;
 }
+
+#iceBox {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-wrap: wrap-reverse;
+}
+
+.ice {
+  width: 33.33%;
+  opacity: 50%;
+}
