Complete cart functionality and styling

--- a/src/cart.css
+++ b/src/cart.css
@@ -39,3 +39,42 @@
 .form-container {
   height: 20%;
 }
+
+.lemonade {
+  width: 90%;
+  height: 200px;
+  background: #fff1aa;
+  border: 2px solid #fff;
+  border-radius: 5px;
+  display: flex;
+  position: relative;
+  margin: 5px;
+}
+
+.glass-front.small {
+  height: 144px;
+  width: 70px;
+}
+
+.background {
+  margin: 20px 5px;
+}
+
+.lemonade-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: #aacde9;
+  margin: 10px;
+  font-size: 90%;
+  position: relative;
+}
+
+.remove {
+  position: absolute;
+  color: palevioletred;
+  bottom: 0;
+  left: 50%;
+  background: none;
+  border: none;
+}
